Started config. Added text logo + social info

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@ layout: default
 <header class="blog-header">
     {% if site.logo %}
       <a class="blog-logo" href="{{site.url}}" style="background-image: url('{{ site.logo }}')">{{ site.title }}</a>
+    {% elsif site.logo_text %}
+      <div class="blog-logo">
+        <span class="blog-logo-text">{{ site.logo_text }}</span>
+      </div>
     {% endif %}
     <h1 class="blog-title">{{ site.title }}</h1>
     <h2 class="blog-description">{{ site.description }}</h2>
