Revert "Protocol relative links on index"
This reverts commit 3f780bca93a3d851a457c98f8f43a6819a992d95.

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@ layout: default
     <h1 class="blog-title">{{ site.title }}</h1>
     <h2 class="blog-description">{{ site.description }}</h2>
     <div class="custom-links">
-      <a href="./about/">About</a>
+      <a href="/about/">About</a>
       &nbsp;&nbsp;·&nbsp;&nbsp;
-      <a href="./training-with-me/">Training With Me</a>
+      <a href="/training-with-me/">Training With Me</a>
       &nbsp;&nbsp;·&nbsp;&nbsp;
-      <a href="./contact/">Contact</a>
+      <a href="/contact/">Contact</a>
       <!-- &nbsp;&nbsp;·&nbsp;&nbsp; -->
       <!-- <a href="/testimonials/">Testimonials</a> -->
       <br />
