Add/update meta tags

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ layout: default
       </div>
     {% endif %}
     <h1 class="blog-title">{{ site.title }}</h1>
-    <h2 class="blog-description">{{ site.description }}</h2>
+    <h2 class="blog-description">{{ site.subtitle }}</h2>
     <div class="custom-links">
       <a href="/about/">About</a>
       &nbsp;&nbsp;·&nbsp;&nbsp;
