Added testimonials page

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@ layout: default
       &nbsp;&nbsp;·&nbsp;&nbsp;
       <a href="/training-with-me/">Training With Me</a>
       &nbsp;&nbsp;·&nbsp;&nbsp;
+      <a href="/testimonials/">Testimonials</a>
+      &nbsp;&nbsp;·&nbsp;&nbsp;
       <a href="/contact/">Contact</a>
       <!-- &nbsp;&nbsp;·&nbsp;&nbsp; -->
       <!-- <a href="/testimonials/">Testimonials</a> -->
