--- a/index.html
+++ b/index.html
@@ -48,6 +48,10 @@ layout: default
 
 <main class="content" role="main">
 
+    <div>
+      <p class="main-quote">"You may never know what results come of your action, but if you do nothing, there will be no results." <br/><span class="quote-author">-- Gandhi</span></p>
+    </div>
+
     {% if site.tags.featured %}
     <h5 class="index-headline featured"><span>Featured</span></h5>
 
