Started gallery page

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@ layout: default
       <span class="link-divider">&nbsp;&nbsp;·&nbsp;&nbsp;</span>
       <a class="navigation-link" href="/testimonials/">Testimonials</a>
       <span class="link-divider">&nbsp;&nbsp;·&nbsp;&nbsp;</span>
+      <a class="navigation-link" href="/gallery/">Gallery</a>
+      <span class="link-divider">&nbsp;&nbsp;·&nbsp;&nbsp;</span>
       <a class="navigation-link" href="/contact/">Contact</a>
     </div>
     <div class="social-links">
